src/stages/snapshots/lumina2__stages__ast_builder__test__assign_simple.snap
---
source: src/stages/ast_builder.rs
expression: a = 1 + 2
---
Assign {
    variable: ExprId(
        0,
    ),
    value: ExprId(
        3,
    ),
}
