src/stages/snapshots/lumina2__stages__ast_builder__test__binary_arithmetic.snap
---
source: src/stages/ast_builder.rs
expression: 1 + 2
---
Binary {
    lhs: ExprId(
        0,
    ),
    op: Plus(
        Plus,
    ),
    rhs: ExprId(
        1,
    ),
}
