src/stages/snapshots/lumina2__stages__ast_builder__test__binary_binary.snap
---
source: src/stages/ast_builder.rs
expression: 5 & 2
---
Binary {
    lhs: ExprId(
        0,
    ),
    op: BinaryAnd(
        Amp,
    ),
    rhs: ExprId(
        1,
    ),
}
