src/stages/snapshots/lumina2__stages__ast_builder__test__binary_logical.snap
---
source: src/stages/ast_builder.rs
expression: true && false
---
Binary {
    lhs: ExprId(
        0,
    ),
    op: LogicalAnd(
        AmpAmp,
    ),
    rhs: ExprId(
        1,
    ),
}
