src/stages/snapshots/lumina2__stages__ast_builder__test__call_simple.snap
---
source: src/stages/ast_builder.rs
expression: some_ident()
---
Call {
    callee: ExprId(
        0,
    ),
    arguments: [],
}
