src/stages/snapshots/lumina2__stages__ast_builder__test__if_else.snap
---
source: src/stages/ast_builder.rs
expression: "if condition { then } else { otherwise }"
---
If {
    conditions: [
        (
            ExprId(
                0,
            ),
            BlockId(
                0,
            ),
        ),
    ],
    otherwise: Some(
        BlockId(
            1,
        ),
    ),
}
