src/stages/snapshots/lumina2__stages__ast_builder__test__if_else_if_else.snap
---
source: src/stages/ast_builder.rs
expression: "if condition { then } else if thing { then_2 } else { otherwise }"
---
If {
    conditions: [
        (
            ExprId(
                0,
            ),
            BlockId(
                0,
            ),
        ),
        (
            ExprId(
                2,
            ),
            BlockId(
                1,
            ),
        ),
    ],
    otherwise: Some(
        BlockId(
            2,
        ),
    ),
}
