src/stages/snapshots/lumina2__stages__ast_builder__test__if_simple.snap
---
source: src/stages/ast_builder.rs
expression: "if condition { then }"
---
If {
    conditions: [
        (
            ExprId(
                0,
            ),
            BlockId(
                0,
            ),
        ),
    ],
    otherwise: None,
}
