src/stages/snapshots/lumina2__stages__ast_builder__test__unary_minus.snap
---
source: src/stages/ast_builder.rs
expression: "-1"
---
Unary {
    op: Negative(
        Minus,
    ),
    value: ExprId(
        0,
    ),
}
