src/stages/snapshots/lumina2__stages__ast_builder__test__unary_not.snap
---
source: src/stages/ast_builder.rs
expression: "!true"
---
Unary {
    op: Not(
        Bang,
    ),
    value: ExprId(
        0,
    ),
}
